prism code styling

--- a/download.html
+++ b/download.html
@@ -147,7 +147,7 @@
     </section>
 
 </main>
-<footer class="text-muted">
+<footer class="text-muted bg-light">
     <div class="container footer-container">
         <p class="copyright">Microconfig.io &copy; 2017-2020</p>
 
