--- a/plugin.html
+++ b/plugin.html
@@ -191,7 +191,7 @@
         </div>
     </section>
 </main>
-<footer class="text-muted">
+<footer class="text-muted bg-light">
     <div class="container footer-container">
         <p class="copyright">Microconfig.io &copy; 2017-2020</p>
 
