Added switched examples to index.html and moved external libs to vendor

--- a/download.html
+++ b/download.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta name="yandex-verification" content="00bf34bc7a08335d"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -48,120 +49,124 @@
           name="keywords">
     <meta content="Microconfig is a modern and simple way to manage microservice configuration. Especially in the Cloud."
           name="description">
-    <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="bloggersans/bloggersans.css" rel="stylesheet">
     <link rel="icon" href="css/favicon.ico">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="bootstrap/bootstrap.bundle.min.js"></script>
     <title>Microconfig.io - Microservice Configuration Made Easy</title>
 </head>
-<body>
 
-<header>
-    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
-        <div class="container">
-            <a href="./" class="navbar-brand">
-                <img style="height: 97px;" src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="features.html">Features</a>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light shadow-sm">
+            <div class="container">
+                <a href="./" class="navbar-brand">
+                    <img style="height: 97px;" src="images/microconfig_logo_horizontal.svg" alt="Microconfig" />
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="features.html">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="download.html">Download</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="documentation.html">Docs</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main role="main" id="download">
+        <section class="jumbotron">
+            <div class="container">
+                <h1 class="text-center">Download</h1>
+                <br /><br /><br />
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 col-lg-6">
+                            <h4 class="mc-green">Binary Cli</h4>
+                            <p class="lead">
+                                You can download Microconfig for your OS from <a class=""
+                                    href="https://github.com/microconfig/microconfig/releases">Github</a>.<br />
+                            </p>
+                            <br />
+                        </div>
+                        <div class="col-md-12 col-lg-6">
+                            <h4 class="mc-green">Homebrew</h4>
+                            <p class="lead">
+                                MacOS install with Homebrew coming soon...<br />
+                            </p>
+                            <br />
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 col-lg-6">
+                            <h4 class="mc-green">Jar Cli</h4>
+                            <p class="lead">
+                                You can download Microconfig executable jar from <a class=""
+                                    href="https://github.com/microconfig/microconfig/releases">Github</a>
+                                or
+                                <a class=""
+                                    href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven
+                                    Central</a>.
+                            </p>
+                            <br />
+                        </div>
+                        <div class="col-md-12 col-lg-6">
+                            <h4 class="mc-green">Core Jar</h4>
+                            <p class="lead">
+                                If you want to add Microconfig-core as a dependency to your Java project use
+                                <a class=""
+                                    href="https://search.maven.org/artifact/io.microconfig/microconfig-core/">microconfig-core</a>.
+                            </p>
+                            <br />
+                        </div>
+                    </div>
+                </div>
+                <br /><br />
+
+                <h4 class="text-center mc-green">How-To</h4>
+                <p class="lead text-center">
+                    Check out <a class="" href="quickstart.html">quickstart</a> to learn how to use Microconfig.
+                </p>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="text-muted bg-light">
+        <div class="container footer-container">
+            <p class="copyright">Microconfig.io &copy; 2017-2020</p>
+
+            <div class="contacts">
+                <ul class="list-unstyled mb-0">
+                    <li class="lead">Join our
+                        <a
+                            href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="download.html">Download</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="documentation.html">Docs</a>
-                    </li>
+                    <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
+                    <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
                 </ul>
             </div>
         </div>
-    </nav>
-</header>
+    </footer>
 
-<main role="main" id="download">
-    <section class="jumbotron">
-        <div class="container">
-            <h1 class="text-center">Download</h1>
-            <br/><br/><br/>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 col-lg-6">
-                        <h4 class="mc-green">Binary Cli</h4>
-                        <p class="lead">
-                            You can download Microconfig for your OS from <a class=""
-                                                                             href="https://github.com/microconfig/microconfig/releases">Github</a>.<br/>
-                        </p>
-                        <br/>
-                    </div>
-                    <div class="col-md-12 col-lg-6">
-                        <h4 class="mc-green">Homebrew</h4>
-                        <p class="lead">
-                            MacOS install with Homebrew coming soon...<br/>
-                        </p>
-                        <br/>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 col-lg-6">
-                        <h4 class="mc-green">Jar Cli</h4>
-                        <p class="lead">
-                            You can download Microconfig executable jar from <a class=""
-                                                                                href="https://github.com/microconfig/microconfig/releases">Github</a>
-                            or
-                            <a class="" href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven
-                                Central</a>.
-                        </p>
-                        <br/>
-                    </div>
-                    <div class="col-md-12 col-lg-6">
-                        <h4 class="mc-green">Core Jar</h4>
-                        <p class="lead">
-                            If you want to add Microconfig-core as a dependency to your Java project use
-                            <a class="" href="https://search.maven.org/artifact/io.microconfig/microconfig-core/">microconfig-core</a>.
-                        </p>
-                        <br/>
-                    </div>
-                </div>
-            </div>
-            <br/><br/>
-
-            <h4 class="text-center mc-green">How-To</h4>
-            <p class="lead text-center">
-                Check out <a class="" href="quickstart.html">quickstart</a> to learn how to use Microconfig.
-            </p>
-        </div>
-    </section>
-
-</main>
-<footer class="text-muted bg-light">
-    <div class="container footer-container">
-        <p class="copyright">Microconfig.io &copy; 2017-2020</p>
-
-        <div class="contacts">
-            <ul class="list-unstyled mb-0">
-                <li class="lead">Join our
-                    <a href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
-                </li>
-                <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
-                <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
-            </ul>
-        </div>
-    </div>
-</footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
