--- a/plugin.html
+++ b/plugin.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta name="yandex-verification" content="00bf34bc7a08335d"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -48,164 +49,169 @@
           name="keywords">
     <meta content="Microconfig is a modern and simple way to manage microservice configuration. Especially in the Cloud."
           name="description">
-    <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="bloggersans/bloggersans.css" rel="stylesheet">
     <link rel="icon" href="css/favicon.ico">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="bootstrap/bootstrap.bundle.min.js"></script>
     <title>Microconfig.io - Microservice Configuration Made Easy</title>
 </head>
+
 <body>
-<header>
-    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
-        <div class="container">
-            <a href="./" class="navbar-brand">
-                <img style="height: 97px;" src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="features.html">Features</a>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light shadow-sm">
+            <div class="container">
+                <a href="./" class="navbar-brand">
+                    <img style="height: 97px;" src="images/microconfig_logo_horizontal.svg" alt="Microconfig" />
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="features.html">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="download.html">Download</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="documentation.html">Docs</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main role="main" id="idea-plugin">
+        <section class="jumbotron">
+            <div class="container">
+                <article class="markdown-body entry-content" itemprop="text">
+                    <h1 class="text-center">JetBrains IDE plugin
+                        <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io">
+                            <img alt="JetBrains IDE plugins"
+                                src="https://img.shields.io/jetbrains/plugin/d/12064-microconfig-io?color=%235fbb92&style=flat-square">
+                        </a>
+                    </h1>
+                    <br />
+                    <p>JetBrains IDE plugin for Microconfig allows navigation to <code>#include</code> and
+                        <code>${placeholder}</code>
+                        sources, preview individual placeholders or whole components and even build your configs.</p>
+                    <p>Plugin is compatible with any JetBrains IDE: IntelliJ IDEA, PhpStorm, WebStorm, PyCharm,
+                        RubyMine, AppCode, CLion, GoLand, DataGrip, Rider, MPS, Android Studio
+                    </p>
+                    <br />
+                    <h2 class="mc-green">Overview</h2>
+                    <p>Plugin adds it's submenu in <code>Main Menu -&gt; Tools -&gt; Microconfig</code> and in editor's
+                        <code>RightClick</code> popup.
+                    </p>
+
+
+                    <p>Microconfig Plugin's main functions:</p>
+                    <ul>
+                        <li>Jump to component (F10)</li>
+                        <li>Resolve placeholder (Ctrl-F10 / Command-F10)</li>
+                        <li>Preview component (Shift-Ctrl-F10 / Shift-Command-F10)</li>
+                        <li>Build configuration (via Run Configuration)</li>
+                    </ul>
+
+                    <br />
+                    <h4 class="mc-green">Jump to component</h4>
+                    <p><code>Jump to component</code> supports navigation from <code>#include component</code> line.
+                        Once activated from the menu or by a hotkey it will try to find <code>component</code> in
+                        'components' directory and open matching file inside.
+                    </p>
+                    <video controls loop style="width: 1000px; max-width: 100%" src="video/jump-include.mp4"></video>
+                    <br />
+                    <br />
+
+                    <h4 class="mc-green">Jump to placeholder</h4>
+                    <p>Also, it can jump to a component referenced in a placeholder like <code>${component@key}</code>.
+                        To choose a placeholder just place your cursor inside <code>{}</code>.
+                        On Jump it will try to find <code>component</code> file and then a line with <code>key</code>
+                        inside
+                        it, once found it will place cursor on that line.
+                    </p>
+                    <br />
+                    <video controls loop style="width: 1000px; max-width: 100%"
+                        src="video/jump-placeholder.mp4"></video>
+                    <br />
+                    <br />
+                    <h4 class="mc-green">Resolve placeholder</h4>
+                    <p><code>Resolve placeholder</code> shows value previews grouped by env names in a small hint.</p>
+                    <p>If activated with cursor inside placeholder <code>${}</code> it will try to resolve only selected
+                        placeholder.</p>
+                    <p>
+                        <img src="images/plugin/resolve-placeholder.png" alt="resolve-placeholder"
+                            style="width: 800px; max-width:100%;"></p>
+
+                    <p>If activated with cursor on a property key it will try to resolve the whole property.</p>
+                    <p><img src="images/plugin/resolve-property.png" alt="resolve-property"
+                            style="width: 800px; max-width:100%;"></p>
+
+                    <p>It also works with expression language.</p>
+                    <p>
+                        <img src="images/plugin/resolve-expression.png" alt="resolve-expression"
+                            style="width: 800px; max-width:100%;"></p>
+                    <br />
+                    <h4 class="mc-green">Configuration preview</h4>
+                    <p>You can preview configuration for a component on the fly. To open preview either activate <code>
+                    Microconfig -&gt; Preview component</code> or use default hotkey (Shift-Ctrl-F10 /
+                        Shift-Command-F10).
+                        Preview window allows you to see resulting configs for different environments.
+                    </p>
+                    <video controls loop style="width: 1000px; max-width: 100%" src="video/preview.mp4"></video>
+                    <br />
+                    <br />
+                    <h4 class="mc-green">Config build</h4>
+                    <p>You can create standard IDEA Run configuration for Microconfig to build configs with your IDE.
+                    </p>
+                    <p>
+                        <img src="images/plugin/run.png" alt="run" style="width: 800px; max-width:100%;">
+                    </p>
+                    <br />
+                    <h4 class="mc-green">Installation</h4>
+                    <p>
+                        Install plugin by name <code>Microconfig.io</code> from Idea <code>Settings -&gt; Plugins -&gt;
+                    Marketplace</code>
+                    </p>
+                    <p>Or download plugin zip file from
+                        <a class="" href="https://plugins.jetbrains.com/plugin/12064-microconfig-io"
+                            rel="nofollow">JetBrains
+                            Plugin repository</a> and import it via <br /> <code>Settings -&gt; Plugins -&gt; Install plugin
+                        from disk...</code>
+                    </p>
+                    <img src="images/plugin/install.png" alt="install" style="width: 800px; max-width:100%;">
+                    <br />
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer class="text-muted bg-light">
+        <div class="container footer-container">
+            <p class="copyright">Microconfig.io &copy; 2017-2020</p>
+
+            <div class="contacts">
+                <ul class="list-unstyled mb-0">
+                    <li class="lead">Join our
+                        <a
+                            href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="download.html">Download</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="documentation.html">Docs</a>
-                    </li>
+                    <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
+                    <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
                 </ul>
             </div>
         </div>
-    </nav>
-</header>
+    </footer>
 
-<main role="main" id="idea-plugin">
-    <section class="jumbotron">
-        <div class="container">
-            <article class="markdown-body entry-content" itemprop="text">
-                <h1 class="text-center">JetBrains IDE plugin
-                    <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io">
-                        <img alt="JetBrains IDE plugins"
-                             src="https://img.shields.io/jetbrains/plugin/d/12064-microconfig-io?color=%235fbb92&style=flat-square">
-                    </a>
-                </h1>
-                <br/>
-                <p>JetBrains IDE plugin for Microconfig allows navigation to <code>#include</code> and <code>${placeholder}</code>
-                    sources, preview individual placeholders or whole components and even build your configs.</p>
-                <p>Plugin is compatible with any JetBrains IDE: IntelliJ IDEA, PhpStorm, WebStorm, PyCharm,
-                    RubyMine, AppCode, CLion, GoLand, DataGrip, Rider, MPS, Android Studio
-                </p>
-                <br/>
-                <h2 class="mc-green">Overview</h2>
-                <p>Plugin adds it's submenu in <code>Main Menu -&gt; Tools -&gt; Microconfig</code> and in editor's
-                    <code>RightClick</code> popup.
-                </p>
-
-
-                <p>Microconfig Plugin's main functions:</p>
-                <ul>
-                    <li>Jump to component (F10)</li>
-                    <li>Resolve placeholder (Ctrl-F10 / Command-F10)</li>
-                    <li>Preview component (Shift-Ctrl-F10 / Shift-Command-F10)</li>
-                    <li>Build configuration (via Run Configuration)</li>
-                </ul>
-
-                <br/>
-                <h4 class="mc-green">Jump to component</h4>
-                <p><code>Jump to component</code> supports navigation from <code>#include component</code> line.
-                    Once activated from the menu or by a hotkey it will try to find <code>component</code> in
-                    'components' directory and open matching file inside.
-                </p>
-                <video controls loop style="width: 1000px; max-width: 100%" src="video/jump-include.mp4"></video>
-                <br/>
-                <br/>
-
-                <h4 class="mc-green">Jump to placeholder</h4>
-                <p>Also, it can jump to a component referenced in a placeholder like <code>${component@key}</code>.
-                    To choose a placeholder just place your cursor inside <code>{}</code>.
-                    On Jump it will try to find <code>component</code> file and then a line with <code>key</code> inside
-                    it, once found it will place cursor on that line.
-                </p>
-                <br/>
-                <video controls loop style="width: 1000px; max-width: 100%" src="video/jump-placeholder.mp4"></video>
-                <br/>
-                <br/>
-                <h4 class="mc-green">Resolve placeholder</h4>
-                <p><code>Resolve placeholder</code> shows value previews grouped by env names in a small hint.</p>
-                <p>If activated with cursor inside placeholder <code>${}</code> it will try to resolve only selected
-                    placeholder.</p>
-                <p>
-                    <img src="images/plugin/resolve-placeholder.png"
-                         alt="resolve-placeholder" style="width: 800px; max-width:100%;"></p>
-
-                <p>If activated with cursor on a property key it will try to resolve the whole property.</p>
-                <p><img src="images/plugin/resolve-property.png"
-                        alt="resolve-property" style="width: 800px; max-width:100%;"></p>
-
-                <p>It also works with expression language.</p>
-                <p>
-                    <img src="images/plugin/resolve-expression.png"
-                         alt="resolve-expression" style="width: 800px; max-width:100%;"></p>
-                <br/>
-                <h4 class="mc-green">Configuration preview</h4>
-                <p>You can preview configuration for a component on the fly. To open preview either activate <code>
-                    Microconfig -&gt; Preview component</code> or use default hotkey (Shift-Ctrl-F10 /
-                    Shift-Command-F10).
-                    Preview window allows you to see resulting configs for different environments.
-                </p>
-                <video controls loop style="width: 1000px; max-width: 100%" src="video/preview.mp4"></video>
-                <br/>
-                <br/>
-                <h4 class="mc-green">Config build</h4>
-                <p>You can create standard IDEA Run configuration for Microconfig to build configs with your IDE.</p>
-                <p>
-                    <img src="images/plugin/run.png" alt="run"
-                         style="width: 800px; max-width:100%;">
-                </p>
-                <br/>
-                <h4 class="mc-green">Installation</h4>
-                <p>
-                    Install plugin by name <code>Microconfig.io</code> from Idea <code>Settings -&gt; Plugins -&gt;
-                    Marketplace</code>
-                </p>
-                <p>Or download plugin zip file from
-                    <a class="" href="https://plugins.jetbrains.com/plugin/12064-microconfig-io" rel="nofollow">JetBrains
-                        Plugin repository</a> and import it via <br/> <code>Settings -&gt; Plugins -&gt; Install plugin
-                        from disk...</code>
-                </p>
-                <img src="images/plugin/install.png"
-                     alt="install"
-                     style="width: 800px; max-width:100%;">
-                <br/>
-            </article>
-        </div>
-    </section>
-</main>
-<footer class="text-muted bg-light">
-    <div class="container footer-container">
-        <p class="copyright">Microconfig.io &copy; 2017-2020</p>
-
-        <div class="contacts">
-            <ul class="list-unstyled mb-0">
-                <li class="lead">Join our
-                    <a href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
-                </li>
-                <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
-                <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
-            </ul>
-        </div>
-    </div>
-</footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
