--- a/quickstart.html
+++ b/quickstart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="yandex-verification" content="00bf34bc7a08335d"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -48,103 +49,102 @@
           name="keywords">
     <meta content="Microconfig is a modern and simple way to manage microservice configuration. Especially in the Cloud."
           name="description">
-    <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="prism/prism.css" rel="stylesheet">
+    <link href="vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/prism/prism.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="bloggersans/bloggersans.css" rel="stylesheet">
     <link rel="icon" href="css/favicon.ico">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="prism/prism.js"></script>
     <title>Microconfig.io - Microservice Configuration Made Easy</title>
 </head>
+
 <body>
-<header>
-    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
-        <div class="container">
-            <a href="./" class="navbar-brand">
-                <img style="height: 97px;" src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="features.html">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="download.html">Download</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="documentation.html">Docs</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light shadow-sm">
+            <div class="container">
+                <a href="./" class="navbar-brand">
+                    <img style="height: 97px;" src="images/microconfig_logo_horizontal.svg" alt="Microconfig" />
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="features.html">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="download.html">Download</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="documentation.html">Docs</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
-<main role="main" id="download">
-    <section class="jumbotron">
-        <div class="container">
-            <h1 id="quickstart" class="text-center">Quickstart</h1>
-            <p>You will learn how to build configuration with Microconfig.</p>
-            <br/>
+    <main role="main" id="download">
+        <section class="jumbotron">
+            <div class="container">
+                <h1 id="quickstart" class="text-center">Quickstart</h1>
+                <p>You will learn how to build configuration with Microconfig.</p>
+                <br />
 
-            <section>
-                <h2 class="" id="setup">Setup</h2><br/>
+                <section>
+                    <h2 class="" id="setup">Setup</h2><br />
 
-                <h3 class="mc-green" id="example-repository">Get Example Config</h3>
-                <p>Checkout with <code>git</code></p>
-                <pre><code class="language-bash">
+                    <h3 class="mc-green" id="example-repository">Get Example Config</h3>
+                    <p>Checkout with <code>git</code></p>
+                    <pre><code class="language-bash">
                     git clone https://github.com/microconfig/microconfig-quickstart.git
                     cd microconfig-quickstart
                 </code></pre>
-                <p>Or just <a
-                        href="https://github.com/microconfig/microconfig-quickstart/archive/master.zip">download</a>
-                    and unzip it directly.</p>
-                <br/>
+                    <p>Or just <a
+                            href="https://github.com/microconfig/microconfig-quickstart/archive/master.zip">download</a>
+                        and unzip it directly.</p>
+                    <br />
 
-                <h3 class="mc-green" id="microconfig-jar">Get Microconfig</h3>
-                <p><a href="download.html">Download</a> the latest binary for your OS.</p>
-                <br/>
+                    <h3 class="mc-green" id="microconfig-jar">Get Microconfig</h3>
+                    <p><a href="download.html">Download</a> the latest binary for your OS.</p>
+                    <br />
 
-                <h3 class="mc-green" id="example-configuration">Config Structure</h3>
-                <p>Our configuration example has 2 services:</p>
-                <ul>
-                    <li><code>payments-backend</code></li>
-                    <li><code>payments-frontend</code></li>
-                </ul>
-                <p>Services are combined into <code>payments</code> group.</p>
-                <p>We have environment specific values for 2 environments:</p>
-                <ul>
-                    <li><code>dev</code></li>
-                    <li><code>prod</code></li>
-                </ul>
-                <p>Each service expects 3 files:</p>
-                <ul>
-                    <li><code>application.yaml</code> - application config</li>
-                    <li><code>deploy.yaml</code> - deployment config</li>
-                    <li><code>logback.xml</code> - logging configuration</li>
-                </ul>
-                <br/>
-            </section>
-            <h2 class="" id="build">Build</h2><br/>
-            <p>Examples assume that you run your build in quickstart repository dir.</p>
-            <br/>
+                    <h3 class="mc-green" id="example-configuration">Config Structure</h3>
+                    <p>Our configuration example has 2 services:</p>
+                    <ul>
+                        <li><code>payments-backend</code></li>
+                        <li><code>payments-frontend</code></li>
+                    </ul>
+                    <p>Services are combined into <code>payments</code> group.</p>
+                    <p>We have environment specific values for 2 environments:</p>
+                    <ul>
+                        <li><code>dev</code></li>
+                        <li><code>prod</code></li>
+                    </ul>
+                    <p>Each service expects 3 files:</p>
+                    <ul>
+                        <li><code>application.yaml</code> - application config</li>
+                        <li><code>deploy.yaml</code> - deployment config</li>
+                        <li><code>logback.xml</code> - logging configuration</li>
+                    </ul>
+                    <br />
+                </section>
+                <h2 class="" id="build">Build</h2><br />
+                <p>Examples assume that you run your build in quickstart repository dir.</p>
+                <br />
 
-            <h3 class="mc-green" id="specific-env-one">Generate configuration for a service in a specific
-                environment</h3>
-            <p>Let's generate configuration for <code>payments-backend</code> service in <code>dev</code> environment.
-            </p>
-            <pre><code class="language-bash">
+                <h3 class="mc-green" id="specific-env-one">Generate configuration for a service in a specific
+                    environment</h3>
+                <p>Let's generate configuration for <code>payments-backend</code> service in <code>dev</code>
+                    environment.
+                </p>
+                <pre><code class="language-bash">
                 microconfig -r . -e dev -s payment-backend
 
                 Filtered 1 component(s) in [dev] env.
@@ -154,27 +154,28 @@
 
                 Generated [dev] configs in 265ms
             </code></pre>
-            <p><strong>Parameters: </strong></p>
-            <ul>
-                <li><code>-r . </code> specify root dir (optional)</li>
-                <li><code>-e dev </code> generate for <code>dev</code> environment</li>
-                <li><code>-s payments-backend </code> generate for <code>payments-backend</code> service</li>
-            </ul>
-            <p>As a result Microconfig created <code>build</code> folder with <code>dev</code> configs for <code>payments-backend</code>.
-            </p>
-            <pre><code class="language-bash">
+                <p><strong>Parameters: </strong></p>
+                <ul>
+                    <li><code>-r . </code> specify root dir (optional)</li>
+                    <li><code>-e dev </code> generate for <code>dev</code> environment</li>
+                    <li><code>-s payments-backend </code> generate for <code>payments-backend</code> service</li>
+                </ul>
+                <p>As a result Microconfig created <code>build</code> folder with <code>dev</code> configs for
+                    <code>payments-backend</code>.
+                </p>
+                <pre><code class="language-bash">
                 build
                 &#x2514;&#x2500;&#x2500; payment-backend
                     &#x251c;&#x2500;&#x2500; application.yaml
                     &#x251c;&#x2500;&#x2500; deploy.yaml
                     &#x2514;&#x2500;&#x2500; logback.xml
             </code></pre>
-            <br/><br/>
-            <h3 class="mc-green" id="specific-env-group">Generate configuration for a group in a specific
-                environment</h3>
+                <br /><br />
+                <h3 class="mc-green" id="specific-env-group">Generate configuration for a group in a specific
+                    environment</h3>
 
-            <p>Let's generate configuration for <code>payments</code> group in <code>prod</code> environment.</p>
-            <pre><code class="language-bash">
+                <p>Let's generate configuration for <code>payments</code> group in <code>prod</code> environment.</p>
+                <pre><code class="language-bash">
                 microconfig -e prod -g payments
 
                 Filtered 2 component(s) in [prod] env.
@@ -188,16 +189,16 @@
                 Generated [prod] configs in 325ms
             </code></pre>
 
-            <p>Parameters: </p>
-            <ul>
-                <li><code>-e prod </code> generate for <code>prod</code> environment</li>
+                <p>Parameters: </p>
+                <ul>
+                    <li><code>-e prod </code> generate for <code>prod</code> environment</li>
 
-                <li><code>-g payments </code> generate for <code>payments</code> group</li>
-            </ul>
+                    <li><code>-g payments </code> generate for <code>payments</code> group</li>
+                </ul>
 
-            <p>As a result Microconfig created <code>build</code> folder with <code>prod</code> configs for
-                <code>payments</code> group.</p>
-            <pre><code class="language-bash">
+                <p>As a result Microconfig created <code>build</code> folder with <code>prod</code> configs for
+                    <code>payments</code> group.</p>
+                <pre><code class="language-bash">
                 build
                 &#x251c;&#x2500;&#x2500; payment-backend
                 &#x2502;   &#x251c;&#x2500;&#x2500; application.yaml
@@ -208,14 +209,14 @@
                     &#x251c;&#x2500;&#x2500; deploy.yaml
                     &#x2514;&#x2500;&#x2500; logback.xml
             </code></pre>
-            <br/><br/>
+                <br /><br />
 
-            <h3 class="mc-green" id="specific-env-all">Generate configuration for all services in a specific
-                environment</h3>
+                <h3 class="mc-green" id="specific-env-all">Generate configuration for all services in a specific
+                    environment</h3>
 
-            <p>Let's generate configuration for all services in <code>dev</code> environment.</p>
+                <p>Let's generate configuration for all services in <code>dev</code> environment.</p>
 
-            <pre><code class="language-bash">
+                <pre><code class="language-bash">
                 microconfig -e dev
 
                 Filtered 2 component(s) in [dev] env.
@@ -229,16 +230,17 @@
                 Generated [dev] configs in 326ms
             </code></pre>
 
-            <p>Parameters: </p>
+                <p>Parameters: </p>
 
-            <ul>
-                <li><code>-e dev</code> generate for <code>dev</code> environment</li>
-            </ul>
+                <ul>
+                    <li><code>-e dev</code> generate for <code>dev</code> environment</li>
+                </ul>
 
-            <p>As a result Microconfig created <code>build</code> folder with configs for all services defined in <code>dev</code>
-                environment.</p>
+                <p>As a result Microconfig created <code>build</code> folder with configs for all services defined in
+                    <code>dev</code>
+                    environment.</p>
 
-            <pre><code class="language-bash">
+                <pre><code class="language-bash">
                 build
                 &#x251c;&#x2500;&#x2500; payment-backend
                 &#x2502;   &#x251c;&#x2500;&#x2500; application.yaml
@@ -250,29 +252,36 @@
                     &#x2514;&#x2500;&#x2500; logback.xml
             </code></pre>
 
-            <br/><br/>
-            <h2 class="" id="conclusion">Conclusion</h2>
+                <br /><br />
+                <h2 class="" id="conclusion">Conclusion</h2>
 
-            <p>We hope you agree that microconfig is easy to use. Now you can explore current example to see Microconfig
-                syntax,<br/> try out <a href="/plugin.html">IDE plugin</a> or deep dive into
-                <a href="/documentation.html">Docs</a>.</p>
-        </div>
-    </section>
-</main>
-<footer class="text-muted bg-light">
-    <div class="container footer-container">
-        <p class="copyright">Microconfig.io &copy; 2017-2020</p>
+                <p>We hope you agree that microconfig is easy to use. Now you can explore current example to see
+                    Microconfig
+                    syntax,<br /> try out <a href="/plugin.html">IDE plugin</a> or deep dive into
+                    <a href="/documentation.html">Docs</a>.</p>
+            </div>
+        </section>
+    </main>
+    <footer class="text-muted bg-light">
+        <div class="container footer-container">
+            <p class="copyright">Microconfig.io &copy; 2017-2020</p>
 
-        <div class="contacts">
-            <ul class="list-unstyled mb-0">
-                <li class="lead">Join our
-                    <a href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
-                </li>
-                <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
-                <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
-            </ul>
+            <div class="contacts">
+                <ul class="list-unstyled mb-0">
+                    <li class="lead">Join our
+                        <a
+                            href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
+                    </li>
+                    <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
+                    <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="vendor/prism/prism.js"></script>
 </body>
+
 </html>
